More improvements in snapshot+restore path
