# src/firecracker/src/api_server/mod.rs
@@ -278,6 +278,7 @@ mod tests {
                 snapshot_path: PathBuf::new(),
                 mem_file_path: Some(PathBuf::new()),
                 sync_snapshot_files: true,
+                pause: false,
             })),
             start_time_us,
         );
@@ -292,6 +293,7 @@ mod tests {
                 snapshot_path: PathBuf::new(),
                 mem_file_path: Some(PathBuf::new()),
                 sync_snapshot_files: true,
+                pause: false,
             })),
             start_time_us,
         );
